--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
@@ -24,6 +24,13 @@
                 <div class="button-section editButtonSection">
                     <div class="btn-group save-group">
                         <button id="Guardar" onclick="javascript:void(0);" type="button" class="btn btn-yellow accionGuardar"><span id="botonGuardar"></span></button>
+                        <button id="dropdown-toggle" type="button" class="btn btn-yellow dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caretWhite"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" id="btnGuardar" class="accionGuardar"><span id="botonGuardar2"></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevo"><span id="botonGuardarYNuevo"></span></a></li>
+                        </ul>
                     </div>
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
@@ -46,10 +53,18 @@
     @*FORMULARIO WPS*@
     <div class="row" id="FieldSetView">
         <div class="row">
-
+            <input id="WPSID" type="hidden" value="0"/>
             <div id="ValidaCamposRequeridosWPS" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 form-group">
                 <label id="WPSNombre"></label>
                 <input id="NomnreWPS" class="form-control general-input" />
+            </div>
+            <div  class="col-xs-2 col-sm-2 col-md-2 col-lg-2 form-group">
+                <label id="">Espesor Maximo</label>
+                <label id="EspesorMaximoWPS">0</label>
+            </div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 form-group">
+                <label id="">Espesor Mínimo</label>
+                <label id="EspesorMinimoWPS">0</label>
             </div>
             @*<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 form-group">
                 <label id="WPSProyecto"></label>
@@ -69,12 +84,12 @@
                     <input id="grupoPRaiz" readonly="readonly" class="general-input" />
                 </div>
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                    <label id="WPSEspesorMaximo"></label>
-                    <label id="EspesorMaximoRaiz">0</label>
+                    <label id="">E. Raiz</label>
+                    <label id="RaizEspesorRaiz">0</label>
                 </div>
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                    <label id="WPSEspesorMinimo"></label>
-                    <label id="EspesorMinimoRaiz">0</label>
+                    <label id="">E. Relleno</label>
+                    <label id="RaizEspesorRelleno">0</label>
                 </div>
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
                     <label id="WPSPWHT"></label>
@@ -105,12 +120,12 @@
                     <input id="grupoPRelleno" readonly="readonly" class="general-input" />
                 </div>
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                    <label id="WPSEspesorMaximo"></label>
-                    <label id="EspesorMaximoRelleno">0</label>
+                    <label id="">E. Raiz</label>
+                    <label id="RellenoEspesorRaiz">0</label>
                 </div>
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                    <label id="WPSEspesorMinimo"></label>
-                    <label id="EspesorMinimoRelleno">0</label>
+                    <label id="">E. Relleno</label>
+                    <label id="RellenoEspesorRelleno">0</label>
                 </div>
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
                     <label id="WPSPWHT2"></label>
@@ -137,7 +152,14 @@
             <div class="formNav clearfix">
                 <div class="button-section editButtonSection">
                     <div class="btn-group save-group">
-                        <button id="Guardar1" onclick="javascript:void(0);" type="button" class="btn btn-yellow accionGuardar"><span id="botonGuardar2"></span></button>
+                        <button id="Guardar1" onclick="javascript:void(0);" type="button" class="btn btn-yellow accionGuardar"><span id="botonGuardar3"></span></button>
+                        <button id="dropdown-toggle" type="button" class="btn btn-yellow dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caretWhite"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" id="btnGuardar1" class="accionGuardar"><span id="botonGuardar4"></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevo1"><span id="botonGuardarYNuevo1"></span></a></li>
+                        </ul>
                     </div>
                     <a id="btnCancelar1" class="btn btn-black"><span id="botonCancelar1"></span></a>
                 </div>
