--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
@@ -23,7 +23,13 @@
                 <div class="button-section editButtonSection">
                     <div class="btn-group save-group">
                         <button id="Guardar" onclick="javascript:void(0);" type="button" class="btn btn-yellow accionGuardar"><span id="botonGuardar"></span></button>
-
+                        <button id="dropdown-toggle" type="button" class="btn btn-yellow dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caretWhite"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" id="btnGuardar" class="accionGuardar"><span id="botonGuardar2"></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevo"><span id="botonGuardarYNuevo"></span></a></li>
+                        </ul>
                     </div>
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
@@ -59,6 +65,7 @@
                 </div>
             </div>
             <div class="row">
+                <input type="hidden" id="PQRID" value="0" />
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRNombreDiv">
                     <label id="lblPQRNombre"> </label>
                     <input type="text" id="NombreId" class="form-control general-input" />
@@ -135,17 +142,23 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <label id="">&nbsp;</label>
                 </div>
+            </div>
         </div>
     </div>
-
     @*Menu Inferior*@
     <div class="row">
         <div class="col-xs-11 col-sm-12 col-md-12 col-lg-11">
             <div class="formNav clearfix">
                 <div class="button-section editButtonSection">
                     <div class="btn-group save-group">
-                        <button id="Guardar1" onclick="javascript:void(0);" type="button" class="btn btn-yellow accionGuardar"><span id="botonGuardar2"></span></button>
-
+                        <button id="Guardar1" onclick="javascript:void(0);" type="button" class="btn btn-yellow accionGuardar"><span id="botonGuardar3"></span></button>
+                        <button id="dropdown-toggle" type="button" class="btn btn-yellow dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caretWhite"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" id="btnGuardar1" class="accionGuardar"><span id="botonGuardar4"></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevo1"><span id="botonGuardarYNuevo1"></span></a></li>
+                        </ul>
                     </div>
                     <a id="btnCancelar1" class="btn btn-black"><span id="botonCancelar1"></span></a>
                 </div>
@@ -166,7 +179,6 @@
         </div>
     </div>
 
-</div>
 
 
 <script src="~/Scripts/AppComponents/Catalogos/PQR/CrearPQR/Ajax.js"></script>
