--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
@@ -54,7 +54,7 @@
     <div class="row" id="FieldSetView">
         <div class="row">
             <input id="WPSID" type="hidden" value="0"/>
-            <div id="ValidaCamposRequeridosWPS" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 form-group">
+            <div id="DivNombreWPS" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 form-group">
                 <label id="WPSNombre"></label>
                 <input id="NomnreWPS" class="form-control general-input" />
             </div>
@@ -184,9 +184,10 @@
 <script src="~/Scripts/AppComponents/WPS/WPSCrear/Ajax.js"></script>
 <script src="~/Scripts/AppComponents/WPS/WPSCrear/Handlers.js"></script>
 <script src="~/Scripts/AppComponents/WPS/WPSCrear/WPSCrear.js"></script>
+<script src="~/Scripts/AppComponents/WPS/WPSCrear/Seguridad.js"></script>
 
 <script>
     @section JavascriptDocumentReadyFunctions {
-    //$authorizationModel["Edita WPS"] = $WPSSaveModel;
+    $authorizationModel["Edita WPS"] = $WPSSaveModel;
     }
 </script>
