--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
 
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -53,13 +54,15 @@
         </div>
     </div>
     @*Controles Superior*@
+
     <div class="row" id="FieldSetView">
+
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <h6> <span id="InpeccionVisualHeaderDimensional"></span></h6>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2 altoControl" id="InputIDDiv">
             <label id="DimensionalVisualHeaderSpoolID"></label><input type="hidden" id="InspeccionDimensionalID" />
-                <input style="width:40%" id="InputOrdenTrabajo" class="item-select" />-<input id="InputID" placeholder="ID" style="width:40%;" />
+            <input style="width:40%" id="InputOrdenTrabajo" class="item-select" />-<input id="InputID" placeholder="ID" style="width:40%;" />
         </div>
         <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2 altoControl">
             <label id="DimensionalVisualHeaderResultadoDimesional"></label>
@@ -79,55 +82,62 @@
             <label id="DimensionalVisualHeaderFechaDimesional"></label>
             <input id="FechaInspeccion" />
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1 altoControl" id="listaJuntasDiv">
-            <label id="DimensionalVisualHeaderListaJUnta"></label>
-            <input id="ListaJuntas" />
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1 altoControl">
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-1 altoControl">
             <label id="">&nbsp;</label>
             <button type="button" id="btnAgregar" class="btn btn-blue"><span id="botonAgregar"></span></button>
         </div>
+        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-2" id="MuestraDiv">
+            <label id="VisualDimencionalHeaderMostrar"></label>
+            <input type="radio" name="Muestra" style=" width:auto;" value="Sin Capturar" /><span id="CapturaArmadSinCaptura"></span>
+            <input type="radio" name="Muestra" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos"> </span>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-2 altoControl" id="listaJuntasDiv">
+            <label id="DimensionalVisualHeaderListaJUnta"></label>
+            <input id="ListaJuntas" />
+        </div>
     </div>
+
     @*GRID*@
     <div class="row addedSectionInLine">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <h6><span id="InpeccionVisualHeaderVisual"></span></h6>
         </div>
-      <div class="row">
-          <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2" id="inputTallerDiv">
-              <label id="DimensionalVisualHeadeTaller"></label>
-              <input id="inputTaller" class="" />
-          </div>   
-          <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2">
-              <label id="DimensionalVisualHeaderResultadoVisual"></label>
-              <input type="radio" name="ResultadoVisual" id="ResultadoVisual" style=" width:auto;" value="Aprobado" /><span id="DimensionalVisualAporbadoVisual"> </span>
-              <input type="radio" name="ResultadoVisual" style=" width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoVisual"> </span>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2" id="inputDefectosVisualDiv">
-              <label id="DimensionalVisualHeaderDefectoVisual"></label>
-              <input id="inputDefectosVisual" class="" />
+        <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2" id="inputTallerDiv">
+                <label id="DimensionalVisualHeadeTaller"></label>
+                <input id="inputTaller" class="" />
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2">
+                <label id="DimensionalVisualHeaderResultadoVisual"></label>
+                <input type="radio" name="ResultadoVisual" id="ResultadoVisual" style=" width:auto;" value="Aprobado" /><span id="DimensionalVisualAporbadoVisual"> </span>
+                <input type="radio" name="ResultadoVisual" style=" width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoVisual"> </span>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2" id="inputDefectosVisualDiv">
+                <label id="DimensionalVisualHeaderDefectoVisual"></label>
+                <input id="inputDefectosVisual" class="" />
 
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2" id="inputInspectorVisualDiv">
-              <label id="DimensionalVisualHeaderInspectorVisual"></label>
-              <input id="inputInspectorVisual" class="" />
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" id="inputFechaVisualDiv">
-              <label id="DimensionalVisualHeaderFechaVisual"></label>
-              <input id="inputFechaVisual" class="" />
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1">
-              <label id="">&nbsp;</label>
-              <button type="button" id="btnAplicarCapturaRapida" class="btn btn-blue"><span id="botonAplicar"></span></button>
-          </div>  
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2" id="inputInspectorVisualDiv">
+                <label id="DimensionalVisualHeaderInspectorVisual"></label>
+                <input id="inputInspectorVisual" class="" />
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" id="inputFechaVisualDiv">
+                <label id="DimensionalVisualHeaderFechaVisual"></label>
+                <input id="inputFechaVisual" class="" />
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1">
+                <label id="">&nbsp;</label>
+                <button type="button" id="btnAplicarCapturaRapida" class="btn btn-blue"><span id="botonAplicar"></span></button>
+            </div>
 
-      </div>
+        </div>
         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
             <input type="radio" name="LLena" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>
             <input type="radio" name="LLena" style=" width:auto;" value="Vacios" /><span id="CapturaArmadoVacios"></span>
 
-        </div>        
+        </div>
         <div id="ContenedorGrid" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="grid" data-role="grid" class="k-grid k-widget">
             </div>
@@ -173,6 +183,7 @@
         </div>
     </div>
 </div>
+
 <script type="text/javascript" src="~/Scripts/AppComponents/Inspeccion/VisualDimensional/Ajax.js"></script>
 <script type="text/javascript" src="~/Scripts/AppComponents/Inspeccion/VisualDimensional/Handlers.js"></script>
 <script type="text/javascript" src="~/Scripts/AppComponents/Inspeccion/VisualDimensional/Render.js"></script>
