Se alinea el menu de filtrado para PQR

--- a/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/overrides.css
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/overrides.css
@@ -1196,3 +1196,7 @@ h6 {
 button[data-bind="visible:operatorVisible"] {
     display:none;
 }
+
+.k-filter-menu div label{
+    text-align:center;
+}
