--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/ServiciosTecnicos/GenerarRequisicion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/ServiciosTecnicos/GenerarRequisicion.cshtml
@@ -77,7 +77,7 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-2 altoControl">
                 <label id=""><span id="ListaRequisicionObservacion"></span></label>
-                <input id="Observacion" class="" />
+                <input id="Observacion" class="general-input" />
             </div>
         </div>
         @*GRID*@
