Se modifican estilos para el espaciado del grid y acomodo del boton en PQR, WPS, y Soldador Certificacion

--- a/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/entities.css
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/entities.css
@@ -947,6 +947,12 @@ header .menu > div {
     border-bottom: 1px solid #CCCCCC;
     background-color: #F8F8F8;
 }
+
+.addedSectionInLineCatalogos {
+    padding-top: 10px!important;
+    margin-top: 0px!important;
+}
+
     /*.addedSectionInLine div {
         margin-bottom:10px;
     }*/
