--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
@@ -52,11 +52,11 @@
         </div>
     </div>
     @*FORMULARIO PQR*@
-    <div class="row addedSectionInLine">
-        <div class="col-sm-10 col-md-10 col-lg-10">
+    <div class="row addedSectionInLine addedSectionInLineCatalogos">
+        <div class="col-sm-11 col-md-11 col-lg-11">
             <label>&nbsp;</label>
         </div>
-        <div class="button-section col-sm-12 col-md-2 col-lg-2">
+        <div class="button-section col-sm-1 col-md-1 col-lg-1">
             <a id="AAgregarPQR" href="@Url.Action("CrearPQR","PQR")" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></a>
         </div>
         <div id="ContenedorGridPopUp" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
