--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadoSoldadoresCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadoSoldadoresCertificacion.cshtml
@@ -53,11 +53,11 @@
 
     @*GRID*@
     <div id="FieldSetView">
-        <div class="row" addedSectionInLine>
-            <div class="button-section col-sm-10 col-md-10 col-lg-10">
+        <div class="row addedSectionInLine addedSectionInLineCatalogos">
+            <div class="button-section col-sm-11 col-md-11 col-lg-11">
                 <label>&nbsp;</label>
             </div>
-            <div class="button-section col-sm-2 col-md-2 col-lg-2">
+            <div class="button-section col-sm-1 col-md-1 col-lg-1">
                 <a id="AgregarSC" href="@Url.Action("AgregarNuevoSoldadorCertificacion","SoldadorCertificacion")" type="button" class="btn btn-newArrival btn-yellow"><span id="BotonNuevo"></span></a>
             </div>
 
