--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
@@ -51,12 +51,12 @@
         </div>
     </div>
     @*GRID*@
-    <div class="row addedSectionInLine">
-        <div class="col-sm-10 col-md-10 col-lg-10">
+    <div class="row addedSectionInLine addedSectionInLineCatalogos">
+        <div class="col-sm-11 col-md-11 col-lg-11">
             <label>&nbsp;</label>
         </div>
-        <div class="col-sm-12 col-md-2 col-lg-2">
-            <a id="AgregarWPS" href="@Url.Action("crearWPS","WPS")" type="button" class="btn btn-newArrival btn-yellow"><span id="WPSButtonNuevoWPS"></span></a>
+        <div class="col-sm-1 col-md-1 col-lg-1">
+            <a id="AgregarWPS" href="@Url.Action("crearWPS","WPS")" type="button" class="btn btn-newArrival btn-yellow"><span id="BotonNuevo"></span></a>
         </div>
         <div id="ContenedorGrid" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="grid" data-role="grid" class="k-grid k-widget">
